syntax = "proto3";

package user;

service UserService {
  rpc getUserById(GetUserRequest) returns (User) {}
  rpc createUserByEmail(CreateUserRequest) returns (User) {}
}

message GetUserRequest {
  string userId = 1;
}

message User {
  string id = 1;
  string name = 2;
  string email = 3;
  string phoneNumber = 4;
}

message CreateUserRequest {
  string id = 1;

  string firstName = 2;

  string lastName = 3;

  string email = 4;

  string role = 5;
}